# sdl3_libs

./: CMakeLists.txt  LICENSE  README.md
cmake/: BuildSDL3.cmake  BuildSDL3_gfx.cmake  BuildSDL3_image.cmake  BuildSDL3_mixer.cmake  BuildSDL3_ttf.cmake
test/: CMakeLists.txt  main.cpp
