CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(sdl3_test)

FIND_PACKAGE(SDL3 REQUIRED)
FIND_PACKAGE(SDL3_ttf REQUIRED)
FIND_PACKAGE(SDL3_gfx REQUIRED)
FIND_PACKAGE(SDL3_image REQUIRED)
FIND_PACKAGE(SDL3_mixer REQUIRED)

ADD_EXECUTABLE(sdl3_test main.cpp)
TARGET_LINK_LIBRARIES(sdl3_test PRIVATE
    SDL3::SDL3
    SDL3_ttf::SDL3_ttf
    SDL3_gfx::SDL3_gfx
    SDL3_image::SDL3_image
    SDL3_mixer::SDL3_mixer)
